--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -36,15 +36,12 @@ margin-top: 15vh;
 
 }
 
-.userinfobox {
-  text-align: left; /* Align text inside userinfobox to the left */
-}
-.userdetails span {
-  text-align: left;
-}
+
 
 .userDetails {
   text-align: left;
+
+  
 }
 .editButtons {
   display: flex;
@@ -123,7 +120,7 @@ margin-top: 15vh;
   border: none;
 }
 
-.userpetbox, .userorderbox {
+.userpetbox, .userorderbox, .userinfobox{
   min-width: 30vw;
 
 }
@@ -180,3 +177,57 @@ margin-top: 15vh;
   align-items: center;
 
 }
+
+@media screen and (max-width: 750px) {
+  .dashboardright button {
+    width: 15vw;
+     height: 50px;
+
+   }
+   
+   .dashboardleft button {
+     height: 7vh;
+     width: 15vw;
+
+   }
+   .maindashboard {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+   }
+    .dashboardleft {
+      margin-top: 60vh;
+    }
+    .dashboardright {
+      margin-top: 0;
+    }
+    .userinfo {
+      margin-top: 10vh;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+    }
+  }
+
+  @media screen and (max-width:450px) {
+    .dashboardright button {
+      width: 20vw;
+       height: 50px;
+  
+     }
+     
+     .dashboardleft button {
+       height: 7vh;
+       width: 20vw;
+  
+       
+     }
+
+    }
+
+
+
+    
