--- a/src/pages/Logo/Logo.css
+++ b/src/pages/Logo/Logo.css
@@ -7,6 +7,7 @@
     padding-top: 25px;
     width: 50%;
     height: auto;
+    
     margin: 0;
 }
 .doggyStuff-logo a {
@@ -16,6 +17,14 @@
     align-items: center;
 }
 
+.logoMain {
+    fill: var(--header-main);
+}
+
+.logo1 {
+    filter: invert(83%) sepia(21%) saturate(347%) hue-rotate(270deg) brightness(100%) contrast(96%);}
+.logo2 {
+    filter: invert(72%) sepia(83%) saturate(3811%) hue-rotate(174deg) brightness(97%) contrast(90%);}
 
 
 @media screen and (max-width: 500px)
