--- a/src/pages/Logo/Logo.css
+++ b/src/pages/Logo/Logo.css
@@ -21,7 +21,7 @@
     fill: var(--header-main);
 }
 
-.logo1 {
+.logo1, .logo-signin {
     filter: invert(83%) sepia(21%) saturate(347%) hue-rotate(270deg) brightness(100%) contrast(96%);}
 .logo2 {
     filter: invert(72%) sepia(83%) saturate(3811%) hue-rotate(174deg) brightness(97%) contrast(90%);}
