--- a/src/pages/SignInSignUp/Components/SignUp/SignUp.css
+++ b/src/pages/SignInSignUp/Components/SignUp/SignUp.css
@@ -11,7 +11,7 @@
   border-bottom-right-radius: 10vh;
   margin-top: -10vh;
   background-color: #f0eccc;
-  /* background-image: url(https://live.staticflickr.com/65535/53140196546_80bad8a6d2_h.jpg); */
+ background-image: url(https://live.staticflickr.com/65535/53097545542_11fd3f6def_h.jpg); 
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
