--- a/src/pages/SignInSignUp/Components/SignUp/SignUp.css
+++ b/src/pages/SignInSignUp/Components/SignUp/SignUp.css
@@ -19,6 +19,13 @@
   width: 100vw;
     
 }
+
+.signUpTitle {
+  color: var(--header-main);
+}
+.submit-button.signup button {
+  background-color: var(--header-main);
+}
 .sign-form1 form {
     display: flex;
     flex-direction: column;
@@ -71,28 +78,6 @@
     margin-bottom: 2vh;
 }
 
-.animate-pop-in {
-    animation: pop-in 0.4s cubic-bezier(0, 0.9, 0.3, 1.2) forwards;
-    opacity: 0;
-  }
-  
-  .sign-in-link{
-    animation-delay: 0.6s;
-  }
-  
-
- .signUpForm form {
-    animation-delay: 0.7s;
-  }
-  
-  .signUpTitle {
-    animation-delay: 0.5s;
-    color: var( --main-blue);
-  }
-  
-  .header-button {
-    animation-delay: 1.1s;
-  }
 
   @keyframes pop-in {
     0% {
