--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -46,7 +46,7 @@
       flex-direction: row;
       justify-content: flex-end;
       align-items: center;
-      height: 100%;
+      height: auto;
       padding: 0;
       margin: 0;
       margin-right: 10px;
