--- a/src/pages/SignInSignUp/Components/SignUp/SignUp.css
+++ b/src/pages/SignInSignUp/Components/SignUp/SignUp.css
@@ -11,7 +11,7 @@
   border-bottom-right-radius: 10vh;
   margin-top: -10vh;
   background-color: #f0eccc;
- background-image: url(https://live.staticflickr.com/65535/53097545542_11fd3f6def_h.jpg); 
+ background-image: url(https://live.staticflickr.com/65535/53168674010_17f2000b2f_k.jpg); 
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -25,6 +25,7 @@
 }
 .submit-button.signup button {
   background-color: var(--header-main);
+  margin: 0;
 }
 .sign-form1 form {
     display: flex;
@@ -94,13 +95,12 @@
 
 
   
-  @media screen and (max-width:800px) {
+  @media screen and (max-width:750px) {
     input {
       width: 100%;
-      height: 3.5rem;
-      margin-bottom: 1rem;
+      height: 3rem;
       border: none;
-    
+      background-color: #ffffff;
       padding: 0 1rem;
       font-size: 1.2rem;
   }
@@ -114,5 +114,11 @@
     font-weight: 700;
     background-color: var(--header-main);
 }
+
+.sign-form1 {
+  background-image: url('https://live.staticflickr.com/65535/53168442224_3089032a24_k.jpg');
+}
     
+    }
+    @media screen and (max-width:500px) {
     }
