get started css

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ code {
  --black-text: #242424;
  --main-blue: #33a7eb;
  --light-blue: #5fbcf1;
+ --accent-blue:rgb(217, 234, 245);
  --background-offwhite: #fcfaf6;
  
 }
