--- a/src/pages/getStarted/getStarted.css
+++ b/src/pages/getStarted/getStarted.css
@@ -19,7 +19,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background-color: #eed8ed;
+        background-color: var(--accent-blue);
         z-index: 1;
         height: 12rem;
         width: 15rem;    
@@ -30,7 +30,7 @@
     .infoBox p {
         color: #242424;
         font-size: 0.8rem;
-        line-height: 1.33;
+        line-height: 1.5;
         margin-bottom: 0;
         margin-top: 0;
         text-align: center;
@@ -39,26 +39,27 @@
     }
     .getStarted h1 {
         color: #242424;
-        font-size: 3rem;
+        font-size: 5rem;
         font-weight: 700;
         line-height: 1.33;
-        margin-bottom: 1vh;
+        margin-bottom: 5vh;
         margin-top: 0;
         padding: 0;
         text-align: center;
+        width:30vw;
 
     }
     .getStartedP{
         color: #242424;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         font-weight: 400;
         line-height: 1.33;
         margin-bottom: 0;
         margin-top: 0;
-        width: 50vw;
+        width: 25vw;
         padding: 0;
         text-align: center;
-        margin-bottom: 2rem;
+        margin-bottom: 5vh;
     }
     .infoBoxImg {
         height: 1.6em;
@@ -66,8 +67,8 @@
     }
 
     .getStartedButton {
-        height: 5rem;
-        width: 12rem;
+        height: 6rem;
+        width: 15rem;
         margin: 0;
         display: flex;
         flex-direction: row;
@@ -75,6 +76,7 @@
         align-items: center;
         background-color: var(--header-main);
         color: #ffffff;
+        font-size: 1.2rem;
         font-weight: 700;
         border-radius: 17.4rem;
         border: 0;
@@ -142,11 +144,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height:17vh;
+    height:15vh;
 
     
    margin: 0;
-    width: 50vw;
+   margin-top: -5vh;
+    width: 55vw;
 }
 .getStartedouter {
     display: flex;
