--- a/src/pages/Survey/formPages/Survey.css
+++ b/src/pages/Survey/formPages/Survey.css
@@ -11,6 +11,16 @@
     justify-content: center;
     z-index: 0;
   }
+  .formWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 60vw;
+    height: 70vh;
+    margin: auto;
+    z-index: 1;
+  }
 
   .surveyForm form {
     display: flex;
@@ -61,7 +71,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 100vw;
     height: 50vh;
     margin: auto;
   }
