--- a/src/pages/Navbar/Navbar.css
+++ b/src/pages/Navbar/Navbar.css
@@ -123,8 +123,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      border-bottom-left-radius: 10vh;
-      border-bottom-right-radius: 10vh;
+      border-bottom-left-radius: 5vh;
+      border-bottom-right-radius: 5vh;
       background-color:var(--main-blue);
       top: 100%;
       left: 0;
@@ -141,6 +141,8 @@
       font-size: 4rem;
       font-weight: 500;
       text-align: center;
+      margin: 0;
+      padding: 0;
       
       
     }
@@ -182,8 +184,8 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      border-bottom-left-radius: 10vh;
-      border-bottom-right-radius: 10vh;
+      border-bottom-left-radius: 5vh;
+      border-bottom-right-radius: 5vh;
       background-color: #cf537c;
       top: 100%;
       left: 0;
@@ -196,15 +198,19 @@
     
     .additionalSignInMenu ul {
       list-style: none;
-      display: block;
+      display: flex;
+      flex-direction: column;
       font-size: 5.6rem;
       font-weight: 500;
       text-align: center;
+      margin: 0;
+      padding: 0;
       
     }
     
     .additionalSignInMenu li {
       margin-bottom: 10px;
+      margin: 0;
       
     }
     
