--- a/src/pages/FAQ/FAQ.css
+++ b/src/pages/FAQ/FAQ.css
@@ -199,6 +199,17 @@ font-size: 1.3rem;
   }
 }
   @media screen and (max-width: 500px) {
-
+    .title {
+        font-size: 0.8rem;
+        margin-top: 2vh;
+        margin-left: -6vw;
   }
-
+  #list {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+  }
+}
