--- a/src/pages/FAQ/FAQ.css
+++ b/src/pages/FAQ/FAQ.css
@@ -203,6 +203,9 @@ font-size: 1.3rem;
   .faqbottom {
     width: 70vw;
   }
+  .faqfloat {
+    display: none;
+  }
 }
   @media screen and (max-width: 500px) {
     .title {
