--- a/src/pages/FAQ/FAQ.css
+++ b/src/pages/FAQ/FAQ.css
@@ -9,6 +9,12 @@
     margin-top: -10vh;
     background-color: var(--accent-pink);
   }
+
+  .faqtitle {
+   font-size: 0.8rem;
+   color: var(--main-blue);
+   font-weight: 300;
+  }
   
   /* Individual FAQ item styles */
   .faq-subject {
@@ -123,6 +129,7 @@ font-size: 1.3rem;
   .faqbottomimg {
     height: 60vh;
   }
+  
 
   .faqfloat {
     height: 40vh;
@@ -162,10 +169,15 @@ font-size: 1.3rem;
     text-align: center;
     font-size: 1.3rem;
 }
+
+.faq-content {
+    margin-top: 12vh;
+}
 .pagetitle {
     font-size: 2.5rem;
     font-weight: 600;
     margin-bottom: 0;
+    margin-top: 2vh;
     text-align: center;
   }
   #list {
@@ -208,6 +220,7 @@ font-size: 1.3rem;
   }
 }
   @media screen and (max-width: 500px) {
+    
     .title {
         font-size: 1rem;
         margin-top: 2vh;
