--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
 
 :root {
 
- --header-main: #facdf0;
+ --header-main: #ffc8f3;
  --black-text: #242424;
  --main-blue: #33a7eb;
  --light-blue: #5fbcf1;
