--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -184,10 +184,14 @@
   width: 100vw;
 }
 
-.tcsinput {
-  width: 10vw;
+.tcsinput  {
+  width: 6vw;
   margin-right: 1rem;
-  border-radius: 10px;
+  border-radius: 60px;
+}
+.tcsinput:checked {
+accent-color: var(--background-offwhite);
+color: #ffffff;
 }
 
 .tcslink a {
@@ -466,7 +470,7 @@
   }
   .input-container button {
     padding: 10px;
-    margin-left: -15.7vw;
+    margin-left: -15.4vw;
     margin-top: 0.7vh;
     margin-bottom: 0;
     font-size: 0.8rem;
