--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -1,7 +1,6 @@
 .profile {
   margin: 0 auto;
   width: 100vw;
-  height: 110vh;
   margin: 0;
   margin-top: -10vh;
   background-color: #f5f5f5;
@@ -120,9 +119,17 @@ margin-top: 15vh;
   border: none;
 }
 
-.userpetbox, .userorderbox, .userinfobox{
+.userpetbox, .userorderbox {
   min-width: 30vw;
 
+}
+.userinfobox{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  width: 100vw;
 }
 
 .dog-overlay, .order-overlay {
@@ -184,31 +191,103 @@ margin-top: 15vh;
      height: 50px;
 
    }
+   .maindashboard {
+    
+   }
+
+   .editinfo  {
+      width: 70vw;
+      height: 3vh;
+      font-size: 0.9rem;
+   }
+   .userinfobox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    margin-top: 10vh;
+
+    width: 80vw;
+    height:100vh;
+  }
    
    .dashboardleft button {
      height: 7vh;
-     width: 15vw;
+     width: 25vw;
+   
 
    }
    .maindashboard {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100vw;
+    margin-top: 10vh;
 
    }
     .dashboardleft {
-      margin-top: 60vh;
+      margin-top: 50vh;
+      height: 100vh;
+      width: 100vw;
+    }
+    .dashboardright {
+      margin-top: 20vh;
+      width: 100vw;
+    }
+    .dogContainer {
+      width: 30vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+      
+    }
+
+    .dogimg img {
+      height: 15vh;
+      width: auto;
+      
+    }
+    .userinfodetails, .useraddressdetails {
+      width: 90vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      line-height: 1;
+
+
+    }
+    .userpetbox {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      
+    }
+    .userDetails {
+      width: 90vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
     }
     .dashboardright {
       margin-top: 0;
     }
     .userinfo {
-      margin-top: 10vh;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
 
+    }
+    .userinfobox {
+   
+      width: 100vw;
+      height: 100vh;
     }
   }
 
